2012-02-07  Martin Simmons (martin@lispworks.com>

	* swank-lispworks.lisp (dspec-file-position): Fall back to regexp
	search if dspec-stream-position gets an error.

2012-01-06  Helmut Eller  <heller@common-lisp.net>

	Add a "sentinel thread" to protect access to global lists.

	* swank.lisp (start-sentinel, sentinel, send-to-sentinel)
	(sentinel-serve, sentinel-stop-server, sentinel-maybe-exit): New.
	(make-connection, close-connection, setup-server, stop-server):
	Use the sentinel.
	(close-connection%): Factored out.
	* swank-backend.lisp (register-thread, find-registered): New.
	* swank-allegro.lisp: Implement it.
	* swank-ccl.lisp:
	* swank-lispworks.lisp:
	* swank-sbcl.lisp:

2012-01-02  Stas Boukarev  <stassats@gmail.com>

	* swank-loader.lisp (lisp-version-string): Append -no-threads to
	SBCL without threads.

2011-12-24  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-init-command): Don't call
	`slime-to-lisp-filename', the lisp is not yet connected and if
	there's another connection it will use the wrong translation.

2011-12-24  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (throw-to-toplevel): If *sldb-quit-restart* is not
	found, try to invoke the last restart, which usually is a
	top-level abort restart. This is useful when the debugger is
	invoked from a non-slime thread.

2011-12-23  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-cycle-connections): Add
	`slime-cycle-connections-hook', to be used by slime-repl.

2011-12-21  Stas Boukarev  <stassats@gmail.com>

	* swank-sbcl.lisp (input-ready-p): Don't use
	sb-impl::fd-stream-fd-type if it's not present.

2011-12-12  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-compile-region): Run slime-flash-region
	directly, not from `slime-before-compile-functions', which is run
	also for C-c C-k.

2011-12-10  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (auto-flush-loop): Don't use call-with-io-timeout.
	Removing it had no effect on the number of failed tests.  If you